--- a/css/global.css
+++ b/css/global.css
@@ -1,27 +1,53 @@
-:root{
-    --bodyBG: #f6f6f6;
-    --bodyFont: #2b3445;
-    --blue: #9fc5ef;
-    --icons:#40464d;
+:root {
+  --bodyBG: #f6f6f6;
+  --bodyFont: #2b3445;
+  --blue: #9fc5ef;
+  --icons: #40464d;
+  --blue-button:#1976d2;
+  --footer-bg:#212529;
+  --white:#fff;
+  --red-button: #e41d43;
 }
-body{
-    background-color: var(--bodyBG);
-    color: var(--bodyFont);
+body {
+  background-color: var(--bodyBG);
+  color: var(--bodyFont);
 }
-.fa-solid{
-    color: var(--icons) ;
+.fa-solid {
+  color: var(--icons);
 }
-a, 
-button{
-    all: unset;
-    display: inline-block;
-    transition: .2s;
+a,
+button {
+  all: unset;
+  display: inline-block;
+  transition: 0.2s;
 }
 button:active,
-a:active{
-    scale: .9;
+a:active {
+  scale: 0.9;
 }
-button:hover, 
-a:hover{
-    cursor: pointer;
+button:hover,
+a:hover {
+  cursor: pointer;
 }
+button:disabled{
+  opacity: 0.7;
+  cursor: not-allowed;
+  scale: 1;
+}
+.flex{
+    display: flex;
+  
+    align-items: center;
+    
+    
+}
+main{
+    width: 80%;
+    margin-inline:auto ;
+}
+@media (width < 600px) {
+    main{
+        width: 100% ;
+    }
+    
+  }
