--- a/css/pages/index.css
+++ b/css/pages/index.css
@@ -6,6 +6,7 @@ div.top-img {
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+  background-attachment: fixed;
 }
 
 @media (width < 1000px) {
@@ -20,33 +21,102 @@ section.content {
 
   top: 45%;
   transform: translateY(-50%);
-  margin-left:10%;
+  margin-left: 10%;
 
-  & .lifestyle{
+  & .lifestyle {
     text-transform: uppercase;
     font-size: 1.7rem;
   }
-  & .men{
+  & .men {
     margin-top: 0.7rem;
     font-weight: bold;
   }
-  & .sale{
-    margin-block: 0.5rem ;
+  & .sale {
+    margin-block: 0.5rem;
     font-weight: bold;
   }
-  & .sale span{
+  & .sale span {
     color: crimson;
     margin-left: 0.8rem;
   }
-  & .free-shipping{
+  & .free-shipping {
     font-size: 1.5rem;
   }
-  & button{
+  & button {
     background-color: black;
     color: white;
     margin-top: 0.9rem;
     font-size: 0.9rem;
     border-radius: 3px;
-    padding:0.6rem 1.6rem;
+    padding: 0.6rem 1.6rem;
+  }
+}
+
+main h1.recommended {
+  margin: 2.3rem 0 2rem 2%;
+}
+@media (width < 600px) {
+  main h1.recommended {
+    margin: 2.3rem 0 2rem 0;
+    font-size:1.4rem;
+  }
+}
+
+main section.products.flex {
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 2rem 1.4rem;
+
+  & article.card {
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    transition: 0.2s;
+  }
+  & article.card:hover {
+    scale: 1.01;
+  }
+  & img {
+    border-radius: 5px 5px 0 0;
+  }
+  & .card .content {
+    background-color: #fff;
+    border-radius: 0 0 5px 5px;
+  }
+  & .card .content .title {
+    padding-top: 0.7rem;
+    padding-inline: 0.4rem;
+    text-transform: capitalize;
+  }
+  .content {
+    margin-top: -1.3em;
+  }
+  & .card .content .description {
+    padding-inline: 0.4rem;
+    font-size: 0.8rem;
+    margin-top: 0.4rem;
+    margin-bottom: 0.6rem;
+    line-height: 1.1rem;
+  }
+  & .card .content .price {
+    margin-left: 0.88rem;
+    font-size: 0.9rem;
+    color: rgba(199, 0, 40);
+    font-weight: bold;
+  }
+  & .add-to-cart {
+    margin-right: 0.88rem;
+    background-color: var(--blue-button);
+    color: #fff;
+    border-radius: 4px;
+    padding: 6px 8px;
+    font-size: 0.7rem;
+    gap: 0.33rem;
+    margin-bottom: 0.7rem;
+    margin-left: 9rem;
+    margin-top: 0.9rem;
+  }
+  & .fa-cart-plus {
+    color: var(--bodyBG);
+    padding: 0.2rem;
   }
 }
